# mwe_networking

./: .gitmodules  CMakeLists.txt  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp
client/: CMakeLists.txt  conanfile.txt
client/src/: main.cpp
server/: CMakeLists.txt  conanfile.txt
server/src/: main.cpp
